<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/main_item"
        android:title="SuperMenu">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/drawer_home"
                android:checkable="true"
                android:icon="@drawable/home_24px"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/drawer_settings"
                android:checkable="true"
                android:icon="@drawable/settings_24px"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/drawer_language"
                android:checkable="true"
                android:icon="@drawable/language_24px"
                android:title="@string/menu_language" />
            </group>
        </menu>
    </item>
</menu>

