<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="martinezruiz.javier.pmdmtarea02.ui.FragmentHome"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="martinezruiz.javier.pmdmtarea02.ui.FragmentSettings"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="martinezruiz.javier.pmdmtarea02.ui.FragmentLanguage"
        android:label="@string/menu_language"
        tools:layout="@layout/fragment_language" />
</navigation>