<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RadioGroup
        android:checkedButton="@+id/enabled_selected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            />
        <RadioButton
            android:id="@+id/rb_spanish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="true"
            android:paddingStart="4dp"
            android:text="@string/radiobutton_text_spanish"/>
        <RadioButton
            android:id="@+id/rb_english"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="false"
            android:enabled="true"
            android:paddingStart="4dp"
            android:text="@string/radiobutton_text_english"/>
    </RadioGroup>



</androidx.constraintlayout.widget.ConstraintLayout>